# pcp-runtime

./: 1-COMPILE  2-TEST  3-ANALYZE  LICENCE  README.md
data/dpotrf/: config-performance.json
data/dtrsm/: config-performance.json
results/kebnekaise/dpotrf/: data
results/kebnekaise/dtrsm/: data
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/dpotrf/: CMakeLists.txt  driver.c  driver.h  main.c  random_matrix.c  random_matrix.h  task-chol-par.c  task-chol-seq.c  task-gemm-par.c  task-gemm-seq.c  task-syrk-par.c  task-syrk-seq.c  task-trsm-par.c  task-trsm-seq.c  tasks.h  utils.h
src/examples/dtrsm/: CMakeLists.txt  driver.c  driver.h  main.c  task-solve-par.c  task-solve-seq.c  task-update-par.c  task-update-seq.c  tasks.h  utils.h
src/runtime/: CMakeLists.txt  pcp.c  pcp.h  spin-barrier.c  spin-barrier.h
test/dpotrf/: dpotrf-analyze-performance.py  dpotrf-correctness.py  dpotrf-performance.py
test/dtrsm/: dtrsm-analyze-performance.py  dtrsm-correctness.py  dtrsm-performance.py
